--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.23.8",
     "express": "^4.18.2",
     "pug": "^3.0.2",
+    "socket.io": "^4.7.3",
     "ws": "^8.16.0"
   }
 }
